# HaikuRemoteDesktop

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  PackageInfo  PackageInfo.in  README.md  Toolchain.cmake
src/InputDriver/: CMakeLists.txt  VirtualMouse.cpp  VirtualMouse.h
src/Preferences/: RemoteDesktopPreflet.cpp  SettingsWindow.cpp  SettingsWindow.h
src/UserlandServer/: CMakeLists.txt  HaikuRemoteDesktop.rdef  InputDriverManager.cpp  InputDriverManager.h  NetworkServer.cpp  NetworkServer.h  NetworkUtils.cpp  NetworkUtils.h  RingBuffer.cpp  RingBuffer.h  ScreenCapture.cpp  ScreenCapture.h  Settings.cpp  Settings.h  VideoEncoder.cpp  VideoEncoder.h  index.html  input.css  messages.proto  package-lock.json  package.json  server.cpp  tailwind.config.js
src/UserlandServer/handlers/: ClipboardPacketHandler.cpp  ClipboardPacketHandler.h  CodecPacketHandler.cpp  CodecPacketHandler.h  FpsPacketHandler.cpp  FpsPacketHandler.h  KeyPacketHandler.cpp  KeyPacketHandler.h  MousePacketHandler.cpp  MousePacketHandler.h  PacketHandler.h  PacketHandlerFactory.cpp  PacketHandlerFactory.h  PingPacketHandler.cpp  PingPacketHandler.h  ResolutionPacketHandler.cpp  ResolutionPacketHandler.h
